--- a/tasks-challenge-frontend/src/App.css
+++ b/tasks-challenge-frontend/src/App.css
@@ -1,38 +1,94 @@
-.App {
+body {
+  background-color: whitesmoke;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+input {
+  border-radius: 25px;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 3px 9px;
+}
+
+select {
+  border-radius: 25px;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 3px 9px;
+  width: auto;
+}
+
+button {
+  border-radius: 25px;
+  color: black;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 3px 9px;
+  margin: 5px 5px;
+}
+
+.delete {
+  background-color: #ff0000;
+  border-radius: 25px;
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 3px 9px;
+  width: auto;
+}
+
+.header {
+  align-items: center;
+  background-color: #343a40;
+  display: flex;
+  height: 100px;
+  justify-content: center;
+}
+
+.page-title {
+  color: #f8f9fa;
+  font-size: 28px;
+  font-weight: 500;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.task-list {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 48px 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.task-card {
+  background-color: white;
+  text-align: center;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 3px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: auto;
+  margin: 5px;
+  width: 600px;
+  flex: 1 1 1;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.task-card-title {
+  word-wrap: break-word;
+  font-size: 20px;
+  font-weight: 400;
+  margin: 0 0 12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-card-date {
+  color: #6c757d;
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0 0 8px;
 }
+
+.movie-card-storyline {
+  font-size: 14px;
+  text-align: justify;
+}
+
