fix: fix some css issues

--- a/tasks-challenge-frontend/src/App.css
+++ b/tasks-challenge-frontend/src/App.css
@@ -41,9 +41,17 @@ button {
 .header {
   align-items: center;
   background-color: #343a40;
-  display: flex;
-  height: 100px;
-  justify-content: center;
+  /* display: flex; */
+  height: 150px;
+  text-align: center;
+}
+
+.page-title {
+  color: #f8f9fa;
+  font-size: 50px;
+  font-weight: 500;
+  text-align: center;
+  padding: 10px 10px;
 }
 
 .page-title {
